[package]
name = "tachyon"
version = "0.1.0"
edition = "2021"
description = "A blazing fast, memory-mapped, lazy-rendering JSONL log analyzer."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
memchr = "2.7"
memmap2 = "0.9"
ratatui = "0.26"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", features = ["json", "native-certs"] }
